Opened 16 years ago

Closed 16 years ago

#3985 closed bug (fixed)

ActivityMonitor crashes when adding view under stressed system

Reported by: idefix Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/ActivityMonitor Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When you add a view in ActivityMonitor (hrev30933, VMWare) with the keyboard it crashes. When you use the mouse it won't crash.

Steps to reproduce:

  • Open ActivityMonitor
  • Press [Alt]-[Esc], the File-menu will open
  • Press [Enter]
  • ActivityMonitor expands and then crashes

Serial-log output:

void AddOnManager::MessageReceived(BMessage *) what: vdwI
void AddOnManager::MessageReceived(BMessage *) what: vdwI
void AddOnManager::MessageReceived(BMessage *) what: vdwI
malloc() of 4294967240 bytes asked
vm_soft_fault: va 0x0 not covered by area in address space
vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x0, ip 0x21150d, write 1, user 1, thread 0xdf
vm_page_fault: thread "w>ActivityMonitor" (223) in team "ActivityMonitor" (216) tried to write address 0x0, ip 0x21150d ("ActivityMonitor_seg0ro" +0x1150d)
debug_server: Thread 223 entered the debugger: Segment violation
stack trace, current PC 0x21150d  Update__11ViewHistoryP11DataHistoryllxxx + 0x241:
  (0x70102a78)  0x216104  _DrawHistory__12ActivityViewb + 0x4d4
  (0x70102b88)  0x216594  Draw__12ActivityViewG5BRect + 0x64
  (0x70102c58)  0x3216d9  Draw__8BDraggerG5BRect + 0x161
  (0x70102cfc)  0x399bd4  _Draw__5BViewG5BRect + 0x94
  (0x70102d3c)  0x39e4b9  DispatchMessage__7BWindowP8BMessageP8BHandler + 0x145d
  (0x70102f1c)  0x3a2088  task_looper__7BWindow + 0x270
  (0x70102f7c)  0x2e413f  _task0___7BLooperPv + 0x3f
  (0x70102fac)  0x7caaec  thread_entry + 0x20

Change History (3)

comment:1 by idefix, 16 years ago

Summary: ActivityMonitor crashes when adding view with keyboardActivityMonitor crashes when adding view under stressed system

I investigated this further and it doesn't matter if the view is added with the mouse or the keyboard.

What you do need is Haiku running in VMware on a slow computer (PII @ 400MHz) and the time interval set to a low value (less than 100ms), causing the processor to be fully utilised by ActivityMonitor. It will then reliably crash every time you add a view.

comment:2 by axeld, 16 years ago

Status: newassigned

I can reproduce this problem when I run a high priority CPU hog while adding the view, too.

comment:3 by axeld, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev30967. Looks like the layout engine needs a deeper look, though.

Note: See TracTickets for help on using tickets.