* CircularBuffer is now save to use even if the buffer allocation failed. This   fixes bug #3985. * This happened as ViewHistory::Update() can obviously be called before the   view is really layouted. Therefore it now restricts the view size to 16384. * Since the Update() happens in Draw(), it looks like this is actually a problem   of our layout engine (as the size is computed via BView::Frame()).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30967 a95241bf-73f2-0310-859d-f6bbb57e9c96